My developer Edition/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Caseprocess1</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Case_resolution_date__c</fullName>
        <label>Case resolution date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Update__c</fullName>
        <formula>TODAY()   -  Account.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>GC1040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5040</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5060</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC1020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website_address__c</fullName>
        <label>Website address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Cases</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Booyah_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Booyah</label>
        <queue>Booyah</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Case_Origin_is_Email_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Phone Support Queue</label>
        <queue>Phone_Support_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Case_Origin_is_Phone_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Email Support Queue</label>
        <queue>Email_Support_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Web_Support_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Web Support Queue</label>
        <queue>Web_Support_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>caseRecordType1</fullName>
        <active>true</active>
        <businessProcess>Caseprocess1</businessProcess>
        <label>phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>caseRecordType2</fullName>
        <active>true</active>
        <businessProcess>Caseprocess1</businessProcess>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>caseRecordType3</fullName>
        <active>true</active>
        <businessProcess>Caseprocess1</businessProcess>
        <label>web</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Phone_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISBLANK(Phone__c))  , LEN( Phone__c)  &lt;&gt; 14)</errorConditionFormula>
        <errorMessage>Phone Number must be 10 characters only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Website</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISBLANK(Website_address__c) ) ,NOT(AND(OR(CONTAINS(Website_address__c, &apos;WWW&apos;) ,CONTAINS(Website_address__c, &apos;www&apos;) ), FIND( Website_address__c, &apos;.&apos;, 1)=3  ,FIND( Website_address__c, &apos;.&apos; ,1)&lt;FIND( Website_address__c, &apos;.&apos; ,5))))</errorConditionFormula>
        <errorMessage>invalid website address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  NOT(ISBLANK(Email__c))  , NOT(AND( CONTAINS( Email__c ,&apos;@&apos;) , CONTAINS(Email__c,&apos;.&apos;), IF(FIND( Email__c, &apos;@&apos; ,2)&lt; FIND( Email__c, &apos;.&apos;,FIND( Email__c, &apos;@&apos; ,2)) , true,false)   )))</errorConditionFormula>
        <errorMessage>Incompatable email field</errorMessage>
    </validationRules>
</CustomObject>